tests/core/snapshots/test-invalid-add-field.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Validation Error\n• Parsing failed because of invalid type: string \"{{.value.user.username}}\", expected a sequence [PostUser, @addField, path]\n",
    "trace": [],
    "description": null
  }
]
