tests/core/snapshots/test-invalid-query-in-http.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of invalid type: map, expected a sequence",
    "trace": [
      "Query",
      "user",
      "@http",
      "query"
    ],
    "description": null
  }
]
