tests/core/snapshots/test-invalid-server.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Validation Error\n• Parsing failed because of invalid type: string \"8000\", expected u16 [@server, port]\n",
    "trace": [],
    "description": null
  }
]
