tests/core/snapshots/test-jq-select.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "userDetails": {
        "id": [
          49
        ],
        "city": "FIZZ",
        "phone": [
          66,
          85,
          90,
          90
        ]
      }
    }
  }
}
