tests/core/snapshots/test-jq-select.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  userDetails(id: Int!): UserDetails
}

type UserDetails {
  city: String!
  id: [Int!]!
  phone: [Int!]!
}

schema {
  query: Query
}
